--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+		href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial"
+		rel="stylesheet" />
+	<link href="./src/css/default.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="./src/css/fonts.css" rel="stylesheet" type="text/css" media="all" />
+  
     <title>React App</title>
   </head>
   <body>
@@ -41,3 +47,4 @@
     -->
   </body>
 </html>
+
